appId: dev.noboil.org
---
- runFlow: login.yaml

- assertVisible: "Organizations"
- assertVisible: "No Organizations"
- assertVisible: "Get Started"
- assertVisible: "Quick Create"

- tapOn: "Get Started"
- waitForAnimationToEnd
- assertVisible: "Profile"

- tapOn: "Display Name"
- inputText: "Maestro Tester"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Organization"

- tapOn: "Organization Name"
- inputText: "Maestro Test Org"
- tapOn: "URL Slug"
- inputRandomNumber:
    length: 8

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Appearance"
- assertVisible: "System"
- assertVisible: "Light"
- assertVisible: "Dark"

- tapOn: "Dark"
- waitForAnimationToEnd

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Preferences"
- assertVisible: "Enable Notifications"

- tapOn: "Enable Notifications"
- waitForAnimationToEnd

- tapOn: "Complete"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Maestro Test Org"
    timeout: 15000
- assertVisible: "Owner"

- tapOn: "Maestro Test Org"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Projects"
    timeout: 15000
